--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,38 +3,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
 }
 
 .modal {
   width: max-content;
+  margin: 6rem;
   /* min-width: 1110px; */
   height: 913px;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
   padding: 2rem;
   background-color: var(--white);
   border-radius: 2.3%;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-
-}
-
-@media (prefers-reduced-motion) {
-
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-
 }
