--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,14 +1,15 @@
 .main {
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modal {
-  width: max-content;
+  /* width: max-content; */
   display: flex;
   flex-direction: column;
-  margin: 6rem;
+  /* margin: 6rem; */
   padding: 2rem 2rem 4.4rem;
   background-color: var(--white);
   border-radius: 2.3%;
